# core-db

./: .gitignore  CMakeLists.txt  README.md
src/: database.cpp  database.hpp  deserializer.hpp  main.cpp  output_formatter.cpp  output_formatter.hpp  serializer.hpp  user_settings.cpp  user_settings.hpp  utils.hpp
src/errors/: parsing_exception.hpp  query_execution_error.hpp
src/query/: create_table_query.cpp  create_table_query.hpp  drop_table_query.hpp  insert_into_query.hpp  parser.hpp  query_base.hpp  query_builder.cpp  query_builder.hpp  query_result.hpp  restore_query.hpp  select_query.cpp  select_query.hpp  sql_lexer.cpp  sql_lexer.hpp  store_query.hpp  truncate_table_query.hpp
src/query/clause/: from_clause.hpp  limit_clause.hpp  order_by_clause.cpp  order_by_clause.hpp  values_clause.cpp  values_clause.hpp  where_clause.hpp
src/table/: table.cpp  table.hpp  table_field.cpp  table_field.hpp
